--- a/.github/workflows/test.ci.yml
+++ b/.github/workflows/test.ci.yml
@@ -1,4 +1,4 @@
-name: Test CI
+name: Tests
 
 on: [push, pull_request]
 
@@ -33,6 +33,11 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          build: npm run build
-          start: npm run start
+          start: npm run start -- --configuration=production
           browser: chrome
+          wait-on: http://localhost:4200
+          parallel: true # Runs test in parallel using settings above
+          record: true # Records to Cypress Cloud
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
