--- a/.github/workflows/test.ci.yml
+++ b/.github/workflows/test.ci.yml
@@ -33,9 +33,9 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          start: npm run start -- --configuration=production
+          start: npm start -- --configuration=production
           browser: chrome
-          wait-on: http://ip6-localhost:4200/
+          wait-on: 'http://[::1]:4200/'
           parallel: true # Runs test in parallel using settings above
           record: true # Records to Cypress Cloud
         env:
