--- a/.github/workflows/test.ci.yml
+++ b/.github/workflows/test.ci.yml
@@ -24,9 +24,18 @@ jobs:
   
   cypress_run:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [16, 18]
     if: ${{success()}}
     needs: [unit_tests]
+    name: Angular E2E test on Node.js ${{ matrix.node }}
     steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+      - run: npm i wait-on
+
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -35,7 +44,7 @@ jobs:
         with:
           start: npm start -- --configuration=production
           browser: chrome
-          wait-on: 'http://[::1]:4200/'
+          wait-on: 'npx wait-on --timeout 60000 http://localhost:4200'
           parallel: true # Runs test in parallel using settings above
           record: true # Records to Cypress Cloud
         env:
