--- a/.github/workflows/test.ci.yml
+++ b/.github/workflows/test.ci.yml
@@ -24,16 +24,13 @@ jobs:
   
   cypress_run:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [16, 18]
     if: ${{success()}}
     needs: [unit_tests]
-    name: Angular E2E test on Node.js ${{ matrix.node }}
+    name: Cypress E2E test
     steps:
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 18
       - run: npm i wait-on
 
       - name: Checkout
