--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "^16.0.2",
     "@angular/platform-browser-dynamic": "^16.0.2",
     "@angular/router": "^16.0.2",
+    "@ngrx/store": "^16.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "eslint": "^8.38.0",
+    "lodash": "^4.17.21",
+    "pexels": "^1.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -36,6 +39,7 @@
     "@angular/compiler-cli": "^16.0.2",
     "@ngneat/spectator": "^14.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.14.194",
     "autoprefixer": "^10.4.14",
     "cypress": "^12.9.0",
     "jasmine-core": "~4.5.0",
@@ -48,6 +52,6 @@
     "postcss": "^8.4.22",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.1",
-    "typescript": "~4.9.4"
+    "typescript": "~5.0.4"
   }
 }
